--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DoNotSleep">
-        <activity android:name=".MainActivity" />
+        android:theme="@style/Theme.OnlineLibrary">
+        <activity android:name=".ui.MainActivity" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
