--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
 
+    ///Material Design
+    implementation 'com.google.android.material:material:1.5.0'
+
+    ///Dots indicator
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+
 
 }
