--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.alimonapps.donotsleep">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera.any" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,6 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineLibrary">
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false" />
         <activity android:name=".ui.MainActivity" />
         <activity
             android:name=".SplashActivity"
