--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.alimonapps.donotsleep">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature android:name="android.hardware.camera.any" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineLibrary">
+        android:theme="@style/Theme.DoNotSleep">
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
